--- a/hajjteck/app/src/main/res/layout/activity_login.xml
+++ b/hajjteck/app/src/main/res/layout/activity_login.xml
@@ -1,187 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/splachback"
-    >
+    tools:context=".MainActivity"
+    android:background="@drawable/splachback">
 
-    <ImageView
-        android:id="@+id/formLogoResultat"
-        android:layout_width="match_parent"
-        android:layout_height="61dp"
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="233dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+
         android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/logo" /><LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    >
+        android:layout_marginTop="235dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="UserName"
+        android:textColor="@color/white" />
 
-</LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/contener"
-        android:layout_width="wrap_content"
-        android:layout_height="307dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-
-        android:layout_marginTop="100dp"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:paddingTop="10dp"
-
-            android:text="Entrer vos information"
-            android:textColor="#10b188"
-            android:textSize="22sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:text="Just a few details to get you started"
-            android:textColor="#10b188"
-            android:textSize="14sp"
-            android:textStyle="italic" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tl_email"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/et_emailpat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginStart="15dp"
-                android:drawablePadding="5dp"
-                android:drawableRight="@drawable/ic_email"
-                android:hint="@string/email"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:singleLine="true"
-                android:textColor="@color/log"
-                android:textSize="25dp"
-                android:textStyle="bold"
-
-                />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tl_password"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/et_password"
-                android:layout_width="270dp"
-                android:layout_height="39dp"
-                android:drawablePadding="5dp"
-                android:drawableRight="@drawable/ic_confirm_icon"
-                android:hint="@string/password"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:singleLine="true"
-                android:textColor="@color/log"
-                android:textSize="25dp"
-                android:textStyle="bold" />
-
-        </android.support.design.widget.TextInputLayout>
-
-
-        <LinearLayout
-            android:id="@+id/BConnexion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btn_send"
-                android:layout_width="260dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="20dp"
-                android:layout_weight="1"
-                android:background="#10b188"
-                android:fontFamily="sans-serif-smallcaps"
-                android:text="Connexion"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-
-                />
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
-    <ProgressBar
-        android:id="@+id/pb_loader"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="233dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="35dp"
-        android:visibility="invisible" />
- <LinearLayout
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:layout_alignParentBottom="true">
+        android:layout_marginBottom="234dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Password"
+        android:textColor="@color/white" />
 
-     <Button
-         android:id="@+id/button10"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_weight="1"
-         android:text="Special need" />
+    <Button
+        android:id="@+id/btn_send"
+        android:layout_width="132dp"
+        android:layout_height="37dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="169dp"
+        android:background="#115C73"
+        android:textColor="@color/white"
+        android:text="Connection" />
 
-     <Button
-         android:id="@+id/button9"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_weight="1"
-         android:text="Hellp other" />
- </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/Register"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/shoot"
+        android:layout_width="123dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="70dp"
-        android:paddingEnd="10dp"
-        android:paddingStart="10dp"
-        android:text="Or Registre here ! "
-        android:textColor="#10b188"
-        android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_above="@+id/pb_loader"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="53dp"
+        android:background="@color/transparent"
+        android:text="Help Other"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="56dp"
+        app:srcCompat="@drawable/logoo" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/shoot"
+        android:layout_marginStart="67dp"
+        android:clickable="true"
+        app:srcCompat="@drawable/medic" />
 
 
 </RelativeLayout>
