--- a/hajjteck/app/src/main/res/layout/activity_main.xml
+++ b/hajjteck/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/background">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/blue_light"
-        android:minHeight="?attr/actionBarSize"
-        />
+        android:layout_height="44dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:minHeight="?attr/actionBarSize" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/white"
+        android:minHeight="?attr/actionBarSize" />
 
     <LinearLayout
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -24,12 +35,14 @@
 
         <Button
             android:id="@+id/button"
+            android:background="@color/transparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="المعلومات الشخصية" />
 
         <Button
+            android:background="@color/transparent"
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,10 +50,107 @@
             android:text="المناسك" />
 
         <Button
+            android:background="@color/transparent"
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="خدمات " />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/profile" />
+
+
+    <LinearLayout
+        android:layout_width="355dp"
+        android:layout_height="114dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="92dp"
+        android:background="#bfffffff"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/white"
+            android:text="الوجهة القادمة"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/wajha"
+            android:layout_width="match_parent"
+            android:layout_height="83dp"
+            android:background="@drawable/backgroundjawha"
+             />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="355dp"
+        android:layout_height="125dp"
+        android:layout_centerInParent="true"
+        android:background="#bfffffff"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/white"
+            android:text="بحث  المجاور"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/gaze"
+            android:layout_width="94dp"
+            android:layout_height="59dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="25dp"
+            android:layout_marginEnd="38dp"
+            android:background="@drawable/gaze" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="74dp"
+            android:layout_height="57dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/gaze"
+            android:layout_marginStart="59dp"
+            android:background="@drawable/poste" />
+
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="355dp"
+        android:layout_height="132dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="69dp"
+        android:background="#bfffffff"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/white"
+            android:text="   الجو"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+
 </RelativeLayout>
